[tool.poetry]
name = "bloom"
version = "0.1.0"
description = "A dating portal"
authors = ["abhijeet"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
loguru = "^0.5.3"
google-cloud-firestore = "^1.9.0"

[tool.poetry.dev-dependencies]
uvicorn = "^0.12.2"
pytest = "^6.1.2"
flake8 = "^3.8.4"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
